--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a {
 }
 
 a:hover {
-  color: #4280f4;
+  color: #0c7cec;
 }
 
 p {
@@ -74,7 +74,7 @@ main {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #4280f4;
+  background-color: #0c7cec;
 }
 
 /* Card */
@@ -122,7 +122,7 @@ footer {
 }
 
 #btn {
-  border: 2px solid #4280f4;
+  border: 2px solid #0c7cec;
   background-color: transparent;
   padding: 20px;
   font-weight: 700;
@@ -138,7 +138,7 @@ footer {
 
 /* Text Follow */
 #foot-text {
-  color: #4280f4;
+  color: #0c7cec;
   font-weight: 700;
   font-size: 18px;
   padding: 20px;
