--- a/src/index.css
+++ b/src/index.css
@@ -117,15 +117,25 @@ footer {
 }
 
 /* Button */
-#content-btn {
-  padding: 10px;
+.content-btn {
+  margin: 10px;
 }
 
-#btn {
+.dir-ctr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn {
   border: 2px solid #0c7cec;
   background-color: transparent;
-  padding: 20px;
+  padding: 10px;
   font-weight: 700;
+}
+
+.blu {
+  background-color: #0c7cec;
 }
 
 /* Icon */
@@ -153,20 +163,23 @@ footer {
 
 }
 
+/* Section */
+
+section {
+  margin-top: 20px;
+}
+
 /* Card */
 
 .card {
   width: calc(100%/6 - 10px);
   height: 200px;
-  margin: 20px 0;
 }
 
 .img {
   width: 100%;
   height: 80%;
 }
-
-
 
 .card img {
   width: 100%;
